--- a/templates/ads/ads.html
+++ b/templates/ads/ads.html
@@ -1,40 +1,33 @@
 {% extends 'base.html' %}
+
 {% block content %}
-    <div class="list-group">
-        <div class="list-group-item active">
-            <div class="list-group-item-text">
-                Test
+    {% include 'ads/paginator.html' %}
+    {% for i in ad %}
+        <div class="container-fluid">
+            <div class="card card-body border-dark border-2">
+                <div class="card-header bg-warning bg-opacity-25"> 
+                    <ul class="horizontal list-unstyled d-flex align-items-center gap-3">
+                        <li>
+                            {% if i.author == user %}                            
+                                <span class="fw-lighter text-bg-info">Моё объявление</span>
+                            {% endif %}
+                            <h5 class="mb-0">{{ i.title }}</h5>
+                        </li>
+                        <li class="ms-auto text-muted small me-3">
+                            <span class="fw-lighter">Категория</span>
+                            <span class="fst-italic">{{ i.get_category_display }} •</span> 
+                            Опубликовано <span class="fw-lighter">{{ i.created_at|date:"d.m.Y" }}</span>
+                        </li>
+                        <li>
+                            <a href="{{ i.pk }}" class="btn btn-outline-primary fixed-btn-width">Подробнее</a>
+                        </li>
+                    </ul>
+                </div>
+            <!-- Специальный встроенный в django тег safe, позволяющий не
+            экранировать html-код, генерируемый в ck_editor -->
+                <div class="card-text mt-2">{{ i.content|safe|truncatewords:15 }}</div>                
             </div>
         </div>
+    {% endfor %}
 
-
-{#            {% if page_obj.has_previous %} <!-- если открыта не первая страница -->           #}
-{#                <a href="?{% url_replace page=1 %}">1</a>#}
-{#                {% if page_obj.previous_page_number != 1 and page_obj.previous_page_number != 2 %}#}
-{#                    ... <!-- многоточие, если номера предыдущей стьраницы и первой страницы отличаются более, чем на 1 -->#}
-{#                   <!-- отображается ссылка на номер предыдущей соседней страницы -->           #}
-{#               {% endif %}#}
-{#            #}
-{#               {% if page_obj.previous_page_number != 1 %}#}
-{#                    <a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>#}
-{#               {% endif %}#}
-{#            {% endif %}#}
-{#    #}
-{#        {{ page_obj.number }} <!-- отображается номер открытой страницы -->#}
-{##}
-{#        <!-- Отображение ссылки на номер следующей соседней страницы -->#}
-{#            {% if page_obj.has_next %} <!-- если не достигнута последняя страница -->        #}
-{#                <a href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>#}
-{#                {% if page_obj.next_page_number !=  paginator.num_pages  %} <!-- если соседняя страница не является последней -->                    #}
-{#                    ...#}
-{#                    <a href="?{% url_replace page=paginator.num_pages %}">{{ paginator.num_pages }}</a>#}
-{#                {%  endif %}                #}
-{#            {% endif %}#}
-{#        </div>#}
-
-    
-    
-    </div>
-    
-    </div>
-{% endblock %}
+{% endblock content %}
