--- a/templates/sign/login.html
+++ b/templates/sign/login.html
@@ -1,17 +1,22 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
     {% if user.is_authenticated  %}
         Вы уже вошли в систему как {{ user.username }}
     {% else %}
-    
+
         <!-- Если пользователь ещё не авторизован, то появляется форма для
         входа и кнопка регистрации для тех, кто ещё не зарегистрирован -->
-        <form method="post" action="{% url 'login' %}">
+        <form method="post" action="{% url 'login' %}" class="col-md-4 ms-5">
             {% csrf_token %}
-            {{ form }}
-            <input type="submit" value="Войти">
+            {{ form | crispy }}            
+            <div class="d-flex">
+                <input type="submit" value="Войти" class="btn btn-outline-primary mt-2 mb-2">
+                <a href="{% url 'signup' %}" class="btn btn-outline-secondary ms-auto mt-2">Регистрация</a>
+            </div>
         </form>
-        <button><a href="{% url 'signup' %}">Регистрация</a></button>
-
+        <div class="mt-3 ms-5">
+            <a href="{% url 'account_reset_password' %}">Забыли пароль?</a>
+        </div>
     {% endif %}
 {% endblock content %}
