--- a/templates/sign/confirm_email.html
+++ b/templates/sign/confirm_email.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
+    <H4 class="mt-2 mb-2">На Вашу почту был выслан код, который нужно ввести сюда в течение трех минут</H4>
     <div class="col-md-5 ms-5">
     <form method="post" action="">
       {% csrf_token %}
         {{ form | crispy }}
-      <button type="submit" class="btn btn-success">Принять</button>
+      <button type="submit" class="btn btn-success mt-2">Принять</button>
     </form>
     </div>
 {% endblock content %}
